add pagination for Beer